[package]
name = "astar"
version = "4.0.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]

repository = "https://github.com/TyOverby/astar"
documentation = "http://tyoverby.com/astar/astar/"
keywords = ["astar", "search", "path", "pathfinding"]
license = "MIT"
description = "A generic implementation of the A* pathfinding algorithm."

[dependencies]
num-traits = "0.1.*"
typed-arena = "1.2.*"
fnv = "1.*.*"
